# meteora-cp-amm-fee-routing

./: .env.example  .gitignore  .test-pool.json  .test-position-nft.json  .test-streams.json  .test-tokens.json  AGENTS.md  Anchor.toml  BOUNTY_EXPLAINED_SIMPLE.md  BOUNTY_REQUIREMENTS_CHECKLIST.md  CLAUDE.md  DEPLOYMENT.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PROGRESS.md  README.md  SUBMISSION_CHECKLIST.md  TASKS.md  WEBSITE_PITCH_PROMPT.md  WEBSITE_TEST_REPORT.md  bounty-analysis.md  bounty-original.md  package-lock.json  package.json  tsconfig.json  validator-command.sh  vercel.json
archive/: CRITICAL_CORRECTION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PROGRESS.md  README.md  TASKS.md  TEST_PLAN.md
docs/: EXECUTION_PLAN_DUAL_BUNDLE.md  PRD_IMPROVEMENTS.md  README.md  SECURITY_AUDIT.md  STORY_3_COMPLETION_REPORT.md  TESTING_GUIDE.md
programs/fee-routing/: Cargo.toml
programs/fee-routing/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  meteora.rs
programs/fee-routing/src/instructions/: distribute_fees.rs  initialize_policy.rs  initialize_position.rs  initialize_progress.rs  mod.rs
programs/fee-routing/src/state/: mod.rs  policy.rs  progress.rs
scripts/: check-devnet.sh  discover-required-accounts.ts  find-streamflow-pdas.ts  init-devnet-accounts.ts  measure-cu.js  reinitialize-progress.ts  run-local-setup.ts  setup-devnet-pool.ts  setup-test-pool.ts  setup-test-streams-localhost.ts  setup-test-streams.ts  setup-test-tokens.ts  start-test-validator.sh  test-real-devnet.sh  thanks.sh
tests/: devnet-bundle.ts  devnet-deployment-test.ts  devnet-stream-proof.ts  devnet-test-stream.ts  e2e-integration.ts  fee-routing.ts  localhost-stream-test.ts  program-logic-tests.ts
website/: DEPLOYMENT.md  LINK_CHECK_REPORT.md  (+6 more)
(+55 files in other folders)
