[package]
name = "fee-routing"
version = "0.1.0"
description = "Permissionless fee routing for Meteora DAMM v2 (CP-AMM)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_routing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Streamflow SDK for reading locked token amounts
streamflow-sdk = { git = "https://github.com/streamflow-finance/rust-sdk", features = ["cpi"] }

# Borsh for deserializing Streamflow Contract accounts (no discriminator)
borsh = "0.10.3"
